# markxiv

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
content/: index.html  index.md
mcp/: Cargo.toml  README.md
mcp/src/: main.rs
src/: arxiv.rs  biorxiv.rs  cache.rs  convert.rs  disk_cache.rs  lib.rs  main.rs  routes.rs  state.rs  tex_main.rs
tests/: conversion_real.rs  routes_integration.rs
tests/data/: 2509.17765.tar
