[package]
name = "markxiv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "process", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
lru = "0.12"
thiserror = "1.0"
bytes = "1.6"
async-trait = "0.1"

[dev-dependencies]
tower = "0.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
