[package]
name = "markxiv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["original-uri"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "process", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "deflate", "brotli"] }
lru = "0.12"
thiserror = "1.0"
bytes = "1.6"
async-trait = "0.1"
pulldown-cmark = "0.10"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
filetime = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
tower-http = { version = "0.5", features = ["trace"] }
num_cpus = "1.16"
dotenvy = "0.15"

[dev-dependencies]
tower = "0.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
