[package]
name = "markxiv-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for converting arXiv papers to markdown via markxiv"

[[bin]]
name = "markxiv-mcp"
path = "src/main.rs"

[dependencies]
markxiv = { path = ".." }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "io-std"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
